Fix migration of group config from old location to new location

On Windows, we cannot use QStandardPaths::GenericConfigLocation because
Gpg4win 5 changes this path from Qt's standard (%LOCALAPPDATA%) to
%GNUPGHOME%/kleopatra. We need to look for the group config in
%LOCALAPPDATA%.

GnuPG-bug-id: 7574