src/utils/migration.h
@@ -2,6 +2,8 @@
 // SPDX-FileContributor: Tobias Fella <tobias.fella@gnupg.com>
 // SPDX-License-Identifier: GPL-2.0-or-later
 
+#pragma once
+
 namespace Migration
 {
 void migrate();
